--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,10 @@
-name=Adafruit Unified Sensor
-version=1.1.14
+version=1.1.14g
 author=Adafruit <info@adafruit.com>
-maintainer=Adafruit <info@adafruit.com>
+maintainer=Gontrill <gontrill@gmail.com>
 sentence=Required for all Adafruit Unified Sensor based libraries.
 paragraph=A unified sensor abstraction layer used by many Adafruit sensor libraries.
 category=Sensors
-url=https://github.com/adafruit/Adafruit_Sensor
+url=https://github.com/SpacesAI-com/Adafruit_Sensor
 architectures=*
 includes=Adafruit_Sensor.h
 
